--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,31 @@ rad.json
 *.flf
 #Test results file
 TestResults.xml
+
+# Компилированные файлы классов
+*.class
+
+# Логи
+*.log
+
+# Файлы BlueJ
+*.ctxt
+
+# Временные файлы Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Архивы пакетов
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Логи виртуальной машины
+hs_err_pid*
+replay_pid*
+
+# Данные Kotlin Gradle Plugin
+.kotlin/
